--- a/Pages/home.html
+++ b/Pages/home.html
@@ -34,7 +34,7 @@
             
             <!-- Right Section: Image of the SIM card -->
             <div class="image-container">
-                <img src="sim-card-image.jpg" alt="SP Fusion Sim Card">
+                <img src="../Images/sim.jpg" alt="SP Fusion Sim Card">
             </div>
         </div>
     </section>
